manifests/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
spec:
  # type: NodePort
  ports:
  - port: 9200
    protocol: TCP
    targetPort: api
  selector:
    component: elasticsearch
